--- a/nodeapp/public/modules/core/views/home.client.view.html
+++ b/nodeapp/public/modules/core/views/home.client.view.html
@@ -1,20 +1,9 @@
 <section data-ng-controller="HomeController">
-	<div class="jumbotron text-center">
+	<div class="jumbotron text-center" id="home-lifestyle">
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-				<!--<img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/img/brand/logo.png" />-->
-			</div>
-		</div>
-		<br>
-		<div class="row">
-			<p class="lead">
+			<h1>
 				Digirithm
-			</p>
-		</div>
-		<div class="row">
-			<p>
-				<a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Learn more</a>
-			</p>
+			</h1>
 		</div>
 	</div>
 
@@ -27,7 +16,6 @@
             	Twitter interactive intelligence api
             	<br>
             	<br>
-            	<a href="/#!/tweetsense">View Demo</a><br>
             	<a href="http://github.com/digirithm/tweetsense">View on Github</a>
             </p>
         </div>
