--- a/nodeapp/public/modules/core/css/core.css
+++ b/nodeapp/public/modules/core/css/core.css
@@ -13,3 +13,12 @@
 .ng-valid.ng-dirty{
     border-color:#78FA89;
 }
+
+#home-lifestyle { 
+    background-image: url(http://ebizresults.com/wp-content/uploads/2014/03/bigdata1.jpg);
+    background-size: 70%;
+    height: 400px;
+}
+
+body { background-color: black; color: white;}
+#home-lifestyle h1 { font-size: 1000%; color: white; text-shadow: 2px 2px gray;}
