--- a/nodeapp/public/modules/core/views/home.client.view.html
+++ b/nodeapp/public/modules/core/views/home.client.view.html
@@ -8,7 +8,7 @@
 	</div>
 
 	<div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
             <h2>
                 <strong>Tweet</strong>Sense
             </h2>
@@ -19,27 +19,19 @@
             	<a href="http://github.com/digirithm/tweetsense">View on Github</a>
             </p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <h2>
-                <strong>Our </strong> Team
+                Team
             </h2>
             <p>
             	<ul>
-            		<li>Andrew Meadors</li>
-            		<li>Bill Berzinskas</li>
-            		<li>Dan Cohn</li>
+            		<li>Andrew Meadors - Founder</li>
+            		<li>Bill Berzinskas - UI</li>
+            		<li>Dan Cohn - Data Science</li>
             	</ul>
             </p>
         </div>
-        <div class="col-md-3">
-            <h2>
-                <strong>Our</strong> Vision
-            </h2>
-            <p>
-
-            </p>
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <h2>
                 <strong>Contact</strong> Us
             </h2>
