--- a/nodeapp/public/modules/core/views/d3-examples.client.view.html
+++ b/nodeapp/public/modules/core/views/d3-examples.client.view.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" ng-controller="D3ExamplesController">
+<div class="panel panel-default" ng-controller="D3GitController">
   <div class="panel-body">
     <h1>Github Commit Graph Powered by Angular Directive wrapping D3</h1>
     <p> This is a very basic example of getting angular / d3 to talk to an external service while seperating concerns and improving reusability with the use of an Anglar Directive.
@@ -15,13 +15,22 @@
   </div>
 </div>
 
+<div class="panel panel-default" ng-controller="D3ChoroplethController" >
+  <div class="panel-body">
+    <h1>Coropleth</h1>
+    <div id="choropleth_demo"></div>
+
+  </div>
+</div>
+
+
 <div class="panel panel-default">
   <div class="panel-body">
         <h1>D3 interface examples</h1>
         <p>Small selection of D3 examples which could be consumed soon.  Good for discussion and reference.</p>
 <a href="http://mbostock.github.io/d3/talk/20111116/airports.html">Airports</a><br>
 <A href="http://mbostock.github.io/d3/talk/20111116/pack-hierarchy.html">Circle Pack</a><br>
-<a href="http://bl.ocks.org/mbostock/4060606">Choropleth</a><br>
+]
 <a href="http://mbostock.github.io/d3/talk/20111018/tree.html">Tree</a><br>
 <a href="http://www.jasondavies.com/wordcloud/#%2F%2Fwww.jasondavies.com%2Fwordtree%2Fcat-in-the-hat.txt"><br>
 <a href="http://square.github.io/cubism/">Cubism</a><br>
