add socket.io config + example

--- a/nodeapp/public/modules/core/views/header.client.view.html
+++ b/nodeapp/public/modules/core/views/header.client.view.html
@@ -26,6 +26,7 @@
 		<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
 			<li><a href="/#!/d3-examples">D3 Examples</a></li>
 			<li><a href="/#!/meanjs">MeanJS</a></li>
+			<li><a href="/#!/socketio">SocketIO</a></li>
 			<li ui-route="/signup" ng-class="{active: $uiRoute}">
 				<a href="/#!/signup">Sign Up</a>
 			</li>
