--- a/nodeapp/public/modules/core/views/home.client.view.html
+++ b/nodeapp/public/modules/core/views/home.client.view.html
@@ -1,44 +1,68 @@
-<section data-ng-controller="HomeController">
-	<div class="jumbotron text-center" id="home-lifestyle">
-		<div class="row">
-			<h1>
-				Digirithm
-			</h1>
-		</div>
-	</div>
+<section class="content">
+    <section class="container" id="home-container">
+        <section data-ng-controller="HomeController">
+        	<div class="jumbotron text-center" id="home-lifestyle">
+        		<div class="row">
+        			<h1>
+        				Digirithm
+        			</h1>
+                    <h3>Ultra Fast Data Processing</h3>
+                    <h3>Interactive Visualization</h3>
+        		</div>
+        	</div>
 
-	<div class="row">
-        <div class="col-md-4">
-            <h2>
-                <strong>Tweet</strong>Sense
-            </h2>
-            <p>
-            	Twitter interactive intelligence api
-            	<br>
-            	<br>
-            	<a href="http://github.com/digirithm/tweetsense">View on Github</a>
-            </p>
-        </div>
-        <div class="col-md-4">
-            <h2>
-                Team
-            </h2>
-            <p>
-            	<ul>
-            		<li>Andrew Meadors - Founder</li>
-            		<li>Bill Berzinskas - UI</li>
-            		<li>Dan Cohn - Data Science</li>
-            	</ul>
-            </p>
-        </div>
-        <div class="col-md-4">
-            <h2>
-                <strong>Contact</strong> Us
-            </h2>
-            <p>
-            	<a target="_blank" href="mailto:digirithim@gmail.com">digirithim@gmail.com</a> 
-            </p>
-        </div>
-    </div>
-	
+        	<div class="row">
+                <div class="col-md-4">
+                    <div class="panel panel-solid-info">
+                        <div class="panel-heading">
+                            <h2 class="panel-title"><strong>Tweet</strong>Sense</h2>
+                        </div>
+                        <div class="panel-body text-center">
+                            Twitter interactive intelligence api
+                            <br>
+                            <br>
+                            <a href="/#!/tweetsense" alt="Check out TweetSense">
+                                <i class="fa fa-bar-chart-o"></i>
+                            </a> 
+                            &nbsp;&nbsp;
+                            &nbsp;&nbsp;
+                            <a href="http://github.com/digirithm/tweetsense">
+                                <i class="fa fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+      
+                </div>
+                <div class="col-md-4">
+                    
+                    <div class="panel panel-solid-info">
+                        <div class="panel-heading">
+                            <h2 class="panel-title"><strong>Our</strong> Team</h2>
+                        </div>
+                        <div class="panel-body text-center">
+                            <h3>Andrew Meadors - Founder</h3>
+                            <h3>Bill Berzinskas - UI</h3>
+                            <h3>Dan Cohn - Data Science </h3>     
+                        </div>
+                    </div>
+                  
+                </div>
+                <div class="col-md-4">
+                    <div class="panel panel-solid-info">
+                        <div class="panel-heading text-center">
+                            <h2 class="panel-title"><strong>Contact</strong> Us</h2>
+
+                        </div>
+                        <div class="panel-body text-center">
+                            <h2>
+                                <a target="_blank" href="mailto:digirithim@gmail.com">digirithim@gmail.com</a> 
+                            </h2>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        	
+        </section>  
+    </section>
 </section>
