--- a/nodeapp/public/modules/tweetsense/views/main.client.view.html
+++ b/nodeapp/public/modules/tweetsense/views/main.client.view.html
@@ -23,19 +23,19 @@
         <div id="leftside-navigation" class="nano">
             <ul class="nano-content">
                 <li class="active">
-                    <a href="index.html"><i class="fa fa-dashboard"></i><span>Dashboard</span></a>
+                    <a href="/#!/tweetsense"><i class="fa fa-dashboard"></i><span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href=""><i class="fa fa-sitemap"></i><span>Demographics</span></a>
+                    <a href="" ng-click="openDemographics()"><i class="fa fa-sitemap"></i><span>Demographics</span></a>
                 </li>
                 <li>
-                    <a href=""><i class="fa fa-question-circle"></i><span>Polls</span></a>
+                    <a href="" ng-click="openPolls()"><i class="fa fa-question-circle"></i><span>Polls</span></a>
                 </li>
                 <li>
-                    <a href=""><i class="fa fa-bar-chart-o"></i><span>Trends</span></a>
+                    <a href="" ng-click="openTrends()"><i class="fa fa-bar-chart-o"></i><span>Trends</span></a>
                 </li>
                 <li>
-                    <a href=""><i class="fa fa-info-circle"></i><span>Suggestions</span></a>
+                    <a href="" ng-click="openSuggestions()"><i class="fa fa-info-circle"></i><span>Suggestions</span></a>
                 </li>
             </ul>
         </div>
