--- a/nodeapp/public/modules/core/views/home.client.view.html
+++ b/nodeapp/public/modules/core/views/home.client.view.html
@@ -41,8 +41,7 @@
                         </div>
                         <div class="panel-body text-center">
                             <h3>Andrew Meadors - Founder</h3>
-                            <h3>Bill Berzinskas - UI</h3>
-                            <h3>Dan Cohn - Data Science </h3>     
+                            <h3>Bill Berzinskas - Co-Founder</h3>    
                         </div>
                     </div>
                   
